--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "2048",
   "version": "1.0.0",
+  "description": "Source code of 2048.denni.dev",
+  "repository": "https://github.com/DannyGJdeJong/2048",
+  "author": "DannyGJdeJong <dannygjdejong@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "gatsby develop --host=0.0.0.0",
+    "build": "gatsby build",
+    "deploy": "gatsby-plugin-s3 deploy --yes"
+  },
   "devDependencies": {
     "@types/styled-components": "^5.1.0",
     "gatsby": "^2.23.4",
+    "gatsby-plugin-s3": "^0.3.5",
     "gatsby-plugin-styled-components": "^3.3.4",
     "gatsby-plugin-ts-config": "^0.2.3",
     "gatsby-plugin-typescript": "^2.4.6",
